# famililook-desktop7

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD_GOVERNANCE_CONSOLIDATED.md  requirements.txt
.claude/: change_log.md  guardrails.json  patch_validator.py  pre-commit-hook.sh  scan-secrets.sh  session-start.sh  settings.json  validate_scope.py  working_set.txt
Agent_1/: AGENT_TEAM_BLUEPRINT.md
app/: challenges.py  desktop3_client.py  main.py  protocol.py  rooms.py
contracts/: card_deck_order.v1.schema.json  compare_faces.v1.schema.json  kinship_analyze.v1.schema.json
docs/: ADVERTISING_AND_CAMPAIGNS.md  AGE_STYLE_DIFFERENTIATION_SPEC.md  CAPACITOR_MOBILE_DEPLOYMENT_PLAN.md  COLOUR_REBRAND_SPEC.md  CULTURAL_THEMES_SPEC.md  DECK_CHECKOUT_ENDPOINT_SPEC.md  DFMEA_facematch.md  DPIA_FAMILILOOK.md  FMEA_comprehensive.md  FULL_PLATFORM_AUDIT_2026-03-26.md  INCIDENT_RESPONSE_PLAN.md  KEEPSAKE_FIX_SPEC.md  KEEPSAKE_MASTER_FIX_PLAN.md  KEEPSAKE_MUG_TEMPLATE_SPEC.md  MASTER_REGRESSION_MATRIX.md  OCCASION_MAPPING_SPEC.html  PLATFORM_ARCHITECTURE.md  PLATFORM_ARCHITECTURE_BRIEF.md  PLATFORM_STRATEGY_AND_RISK_REGISTER.md  PRODUCT_CATALOG_INVESTOR.md  SECURITY_ASSESSMENT_2026-02-27.md  SWOT_ANALYSIS_2026-03-26.md  TARA_facematch.md  UXD_all_products.md
famililook-desktop6/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
famililook-desktop7/: requirements.txt
famililook-game-engine/: pyproject.toml
famililook-game-engine/src/famililook_game_engine/: __init__.py
famililook-shared/: package.json
tests/: test_rooms.py
(+234 files in other folders)
